tests/baselines/reference/parserMemberVariableDeclaration1.errors.txt
parserMemberVariableDeclaration1.ts(2,10): error TS1028: Accessibility modifier already seen.


==== parserMemberVariableDeclaration1.ts (1 errors) ====
    class C {
      public public Foo;
             ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }